--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^12.6.3",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "npm": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-select": "^5.10.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.3.4",
