--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.6.3",
     "i": "^0.3.7",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.509.0",
     "npm": "^11.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
