--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "i": "^0.3.7",
     "jwt-decode": "^4.0.0",
