--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
     "xlsx": "^0.18.5"
   },
